--- a/demo.html
+++ b/demo.html
@@ -8,7 +8,7 @@
     <h1>hello world</h1>
     <h2>0</h2>
     <button>Click me</button>
-    <button onclick="count()">Count</button>
+    <button id="c">Count!!</button>
     <button onclick="changeName()">Change</button>
     <form>
       <input type="text" id="name" autofocus placeholder="Name" />
