--- a/currency.html
+++ b/currency.html
@@ -2,16 +2,53 @@
 <html lang="en">
   <head>
     <title>Currencies</title>
+
     <script>
-      document.addEventListener("DOMContentLoaded", () => {
-        fetch("https://api.exchangeratesapi.io/latest?base=USD")
-          .then((response) => response.json())
-          .then((data) => {
-            const rate = data.rates.EUR;
-            document.querySelector("body").innerHTML = rate.toFixed(3);
-          });
+      document.addEventListener("DOMContentLoaded", function () {
+        document.querySelector("form").onsubmit = function () {
+          // Send a GET request to the URL
+          fetch("https://api.exchangeratesapi.io/latest?base=USD")
+            // Put response into json form
+            .then((response) => response.json())
+            .then((data) => {
+              // Get currency from user input and convert to upper case
+              const currency = document
+                .querySelector("#currency")
+                .value.toUpperCase();
+
+              // Get rate from data
+              const rate = data.rates[currency];
+
+              // Check if currency is valid:
+              if (rate !== undefined) {
+                // Display exchange on the screen
+                document.querySelector(
+                  "#result"
+                ).innerHTML = `1 USD is equal to ${rate.toFixed(
+                  3
+                )} ${currency}.`;
+              } else {
+                // Display error on the screen
+                document.querySelector("#result").innerHTML =
+                  "Invalid Currency.";
+              }
+            })
+            // Catch any errors and log them to the console
+
+            .catch((error) => {
+              document.querySelector("#result").innerHTML = `Error:, ${error}`;
+            });
+          // Prevent default submission
+          return false;
+        };
       });
     </script>
   </head>
-  <body></body>
+  <body>
+    <form>
+      <input type="text" id="currency" placeholder="Currency" />
+      <input type="submit" value="Convert" />
+    </form>
+    <p id="result"></p>
+  </body>
 </html>
